--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Jarvis AI App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ultimate Jarvis App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #4CAF50;
+        }
+        button {
+            padding: 15px 30px;
+            font-size: 16px;
+            margin: 10px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, Ari! Jarvis is live!</h1>
+    <h1>Welcome to the Ultimate Jarvis App!</h1>
+    <p>Your personal AI assistant is ready to go!</p>
+    <button onclick="alert('Voice Control Activated')">Voice Control</button>
+    <button onclick="alert('Cloud Gaming Launched')">Cloud Gaming</button>
+    <button onclick="alert('3D Printer Connected')">3D Printer</button>
 </body>
 </html>
